--- a/lexmarkv2.html
+++ b/lexmarkv2.html
@@ -84,51 +84,49 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 	<section>
 	<div class="contentblock content-wrapper900" style="padding-top: 3em;">
 		<div class="row">
-			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-				<p class="overview-info">Role</p>
-				<p style="line-height:1.5em;">UX Design Intern</p>
-			</div>
-			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
 				<p class="overview-info">Duration</p>
 				<p style="line-height:1.5em;"> 3 months</p>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
 				<p class="overview-info">Tools</p>
 				<p style="line-height:1.5em;">Axure, Adobe XD</p>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
-				<p class="overview-info">Type</p>
-				<p style="line-height:1.5em;">Internship</p>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 text-center">
+				<p class="overview-info">Team</p>
+				<p style="line-height:1.5em;">UX Team Manager<br>UX Researcher <br>UX Designer ( me 👋🏼)</p>
 			</div>
 		</div>
 		</div>
 	</section>
 
-  <section>
-    <div class="content-wrapper900">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h4>background</h4>
-          <h3>I redesigned Lexmark's internal tool ServiceNow</h3>
-          <p>ServiceNow is a customizable SaaS for technical management support. As you can see in the dashboard below, Lexmark uses ServiceNow for a variety of jobs. For my internship project, I redesigned the Facilities and Site Operations section of the platform. In F/S Operations, users can submit requests for anything they need. Requests can include requesting access to specific software or requesting maintenance because you just spilled coffee in the hallway.
-<p><br>
+	<section>
+    <div class="contentblock">
+			<div class="row">
 
-
-          </p>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<img src="images/lexmarkhome.png" class="img-responsive" style="max-width:85%; float:right; padding: 25px 0px;">
         </div>
-      </div>
-    </div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+					<h4>Overview</h4>
+					<p>As a UX design intern, I redesigned ServiceNow, a customizable SaaS for technical management support for Lexmark employees.
+					</p>
+
+					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
+					</p> -->
+
+					<p>There was a consensus among employees that ServiceNow created more problems than it solved. Employees actively avoided the web app.</p>
+					<p>As a UX design intern, I led a user-centered approach to redesign ServiceNow's information architecture, its interface, and improve its UX. Usability tests, card sorts, and interviews supported my design decisions.
+</p>
+					<p style="font-weight:600;">The outcome of my redesign was an enhanced usability score of a 36% improvement and higher employee satisfaction ratings.</p>
+				</div>
+    </div></div>
   </section>
 
-  <section>
-    <div class="contentblock content-wrapper914">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <img src="images/lexmarkhome.png" class="img-responsive">
-        </div>
-      </div>
-    </div>
-  </section>
+
+
+
+
 
 
 
@@ -136,63 +134,134 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>The Problem</h4>
-					<h3 style="line-height: 1.5em;">Lexmark's implementation of ServiceNow was the plague</h3>
-					<p>Everyone avoided it and the manager of the ServiceNow team was miserable. There was an entire team dedicated to fleshing out ServiceNow for Lexmark employees, but people weren't using the platform as much as they should.
+					<h4>THE PROBLEM</h4>
+					<h3 style="line-height: 1.5em;">People weren't using ServiceNow as much as they should<h3></div></div>
+						<div class="row">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-erviceNow received over 4000 service requests in the last 12 months. On the other hand, 88% of service requests were processed over traditional phone calls.
-
-
+					<p>Of all service requests, ServiceNow received only 12% of service requests. With the remaining tens of thousands of service requests coming in through phone calls, the phone lines were always busy and required extra employees. Employees calling in couldn't promptly do their actual work because they were experiencing longer wait times.
 					</p>
+				</div>
+
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+					<img src="images/lexmarkemoji.png" class="img-responsive center" style="max-width:85%; float:center; padding-top:2em;">
+				<br><br>	<p style="text-align:center;">ServiceNow Team</p>
+
 				</div>
 			</div>
 		</div>
 	</section>
 
-  <section>
+	<section>
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>The *Ouch*</h4>
-					<h3 style="line-height: 1.5em;">These phone calls had a cost... and the cost was large</h3>
-					<p>With tens of thousands of requests coming through the phone, phone lines were always busy. This meant extra employees were required to be on standby and employees calling the requests in experienced longer wait times which prevented them from doing their actual jobs. In business, time is money.
-
-
+					<h4>Challenge</h4>
+					<h3>Increase the usage of ServiceNow</h3>
+	<p>I hoped that by improving the user experience of ServiceNow, employee opinions on the platform will because positive, and in result, usage of platform will increase. I not only needed to understand why people were avoiding the platform but also be able to pinpoint the exact steps that were frustrating the employees. Before I get into the process however, here is quick glance at the solution.
 					</p>
 				</div>
 			</div>
 		</div>
 	</section>
 
+	<!-- <section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>The challenge</h4>
+					<h3>How can I increase the usage of ServiceNow?</h3>
+					<p>Slapping CTA buttons weren't going to cut it. After interviewing target users (manager, administrative assistant, and request handler), it was obvious ServiceNow had problems with its UX that went beyond confusing UI.</p>
+				</div>
+			</div>
+		</div>
+	</section> -->
 
-  <section>
-    <div class="contentblock content-wrapper900">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h4>The challenge</h4>
-          <h3 style="line-height: 1.5em;">Improve the UX of ServiceNow</h3>
-          <p>The ServiceNow team manager asked the UX team to help increase the usage of ServiceNow. I began to explore how I can as a UX designer improve employees' opinions of this platform. I hoped that by improving the user experience of ServiceNow, people's opinions on the platform will become positive, and ultimtely, usage of the platform will increase.
 
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
+	<section>
+		<div class="content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Pain Points at Glance</h4>
+					<h3>There was ample opportunity to improve the platform</h3>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="contentblock">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<img src="images/newcomparison3.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+
+													<p> <span style= "font-weight:700;"><br><br>1. Unclear Writing</span><br>The form titles were confusing. Employees weren't sure that they were submitting the correct request form.<br>
+												</p>
+														<p><span style= "font-weight:700;">2. Poor Information Architecture</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p>
+															<p><span style= "font-weight:700;">3. Overwhelming Forms</span><br> The forms were long and had so many opportunities for users to make errors.</p>
+
+				</div>
+		</div></div>
+	</section>
+
+
+
+
+	<section>
+		<div class="content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Solution at glance</h4>
+					<h3>Success rate went from 53% to 89%</h3>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="contentblock" style="max-width:1500px;">
+			<div class="row">
+				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
+					<img src="images/newcomparison2.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+				</div>
+				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+				</div> -->
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+	<p><span style= "font-weight:700;"><br><br>1. New Information Architecture</span><br>A user begins with location and then only sees forms relevant to their location.</p>
+													<p> <span style= "font-weight:700;">2. Cards > Dropdown</span><br>Cards allowed room for description texts for potentially confusing form titles.</p>
+
+															<p><span style= "font-weight:700;">3. 10 redesigned request forms</span><br> Forms were made to be dynamic to help users see only the relevant information pertaining to their request</p>
+
+
+					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
+					</p> -->
+
+				</div>
+		</div></div>
+	</section>
+
+
 
 
 	<section>
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>original design</h4>
-					<h3>Lexmark emplo</h3>
-					<p>While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was a significant contributor to climate change. With this newfound knowledge, I decided to say goodbye to my meat-rich diet and embrace vegetarianism. However, I couldn't give up the love of my life- chicken chalupas, and hence, a new project emerged.
+					<h4>Interviews</h4>
+					<h3>Employees did not have confidence on the platform</h3>
+<p>In the original platform, employees were unable to find
+
+					<p>
 
 					</p>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
   <section>
     <div class="contentblock content-wrapper900">
@@ -200,6 +269,8 @@ erviceNow received over 4000 service requests in the last 12 months. On the othe
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <h4>solution aka my redesign</h4>
           <h3>Lexmark emplo</h3>
+          <img src="images/lexmarkhomepage.png" class="img-responsive">
+
           <p>While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was a significant contributor to climate change. With this newfound knowledge, I decided to say goodbye to my meat-rich diet and embrace vegetarianism. However, I couldn't give up the love of my life- chicken chalupas, and hence, a new project emerged.
 
           </p>
@@ -208,17 +279,6 @@ erviceNow received over 4000 service requests in the last 12 months. On the othe
     </div>
   </section>
 
-<section>
-	<div class="contentblock content-wrapper900">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>The problem</h4>
-				<h3>Turns out, my mom wants to eat less meat too</h3>
-				<p>Over the last several years, there has been a continuous rise in vegetarian and vegan diets. I found others like me, who also struggled to limit their meat intake. <span style="font-weight:600;">I decided to explore how I can, as a product designer, help people eat less meat. </span></p>
-			</div>
-		</div>
-	</div>
-</section>
 
 <section>
 	<div class="content-wrapper900">
