--- a/lexmark.html
+++ b/lexmark.html
@@ -106,6 +106,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 						<img src="images/lexmarkhome.png" class="img-responsive" style="max-width:85%; float:right; padding: 25px 0px;">
+						<img src="images/lexmarkhomedescription.png" class="img-responsive" style="max-width:470px; float: right; padding: 0px 5px;">
         </div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 					<h4>Overview</h4>
@@ -115,8 +116,8 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 					<!-- <p>At Lexmark, when employees need something, the employees are expected to go on the ServiceNow web app to locate and submit the specific form which pertains to their request.
 					</p> -->
 
-					<p>There was a consensus among employees that ServiceNow created more problems than it solved. Employees actively avoided the web app.</p>
-					<p>As a UX design intern, I led a user-centered approach to redesign ServiceNow's information architecture, its interface, and improve its UX. Usability tests, card sorts, and interviews supported my design decisions.
+					<p>There was a consensus among employees that ServiceNow created more problems than it solved.</p>
+					<p>As a UX design intern, I led a user-centered approach to redesign ServiceNow's information architecture, its interface, and its UX. Usability tests, card sorts, and interviews supported my design decisions.
 </p>
 					<p style="font-weight:600;">The outcome of my redesign was an enhanced usability score of a 36% improvement and higher employee satisfaction ratings.</p>
 				</div>
@@ -124,7 +125,19 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
   </section>
 
 
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>My role</h4>
+					<h3>Helping ServiceNow Service Now</h3>
+					<p>I had the opportunity to conduct user research to identify design opportunities and create a fully functioning prototype on Axure. After my internship, I decided to explore the visual design independently. </p><br>
+					<img src="images/lexmarkprocess.png" class="img-responsive">
 
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
@@ -158,7 +171,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Challenge</h4>
 					<h3>Increase the usage of ServiceNow</h3>
-	<p>I hoped that by improving the user experience of ServiceNow, employee opinions on the platform will because positive, and in result, usage of platform will increase. I not only needed to understand why people were avoiding the platform but also be able to pinpoint the exact steps that were frustrating the employees. Before I get into the process however, here is quick glance at the solution.
+	<p>I hoped that by improving the user experience of ServiceNow, employee opinions on the platform will become positive, and in result, usage of platform will increase. I not only needed to understand why people were avoiding the platform but also be able to pinpoint the exact steps that were frustrating the employees. Before I get into the process however, here is quick glance at the pain points and solution.
 					</p>
 				</div>
 			</div>
@@ -257,7 +270,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 						<div class="content">
 							<div class="row">
 								<div class="col-md-12 col-sm-12 text-center">
-									<h2>Phase 1 of 4: Problem Framing</h2>
+									<!-- <h2>Phase 1 of 4: Problem Framing</h2> -->
 									</div>
 								</div><br><br><br><br><br><br>
 			<!-- <div class="row">
@@ -329,7 +342,6 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 						<div class="content contentblock">
 							<div class="row">
 								<div class="col-md-12 col-sm-12 text-center">
-									<h2>Phase 2 of 4: Exploring</h2>
 									</div>
 								</div>
 			<!-- <div class="row">
