--- a/lexmark.html
+++ b/lexmark.html
@@ -130,8 +130,8 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>My role</h4>
-					<h3>Helping ServiceNow Service Now</h3>
-					<p>I had the opportunity to conduct user research to identify design opportunities and create a fully functioning prototype on Axure. After my internship, I decided to explore the visual design independently. </p><br>
+					<!-- <h3>Helping ServiceNow Service Now</h3> -->
+					<p>I had the opportunity to conduct user research, iterate on my designs, and create a prototype on Axure. After my internship, I independently explored the platform's visual design and microinteractions. </p>
 					<img src="images/lexmarkprocess.png" class="img-responsive">
 
 				</div>
@@ -191,33 +191,6 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 	</section> -->
 
 
-	<section>
-		<div class="content-wrapper900">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Pain Points at Glance</h4>
-					<h3>There was ample opportunity to improve the platform</h3>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="contentblock">
-			<div class="row">
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-					<img src="images/newcomparison3.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
-				</div>
-				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
-
-													<p> <span style= "font-weight:700;"><br><br>1. Unclear Writing</span><br>The form titles were confusing. Employees weren't sure that they were submitting the correct request form.<br>
-												</p>
-														<p><span style= "font-weight:700;">2. Poor Information Architecture</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p>
-															<p><span style= "font-weight:700;">3. Overwhelming Forms</span><br> The forms were long and had so many opportunities for users to make errors.</p>
-
-				</div>
-		</div></div>
-	</section>
 
 
 
@@ -259,10 +232,34 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 
 
+	<section>
+		<div class="content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Pain Points at Glance</h4>
+					<h3>There was ample opportunity to improve the platform</h3>
+				</div>
+			</div>
+		</div>
+	</section>
 
-</body>
-</html>
+	<section>
+		<div class="contentblock">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<img src="images/newcomparison3.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
+													<p> <span style= "font-weight:700;"><br><br>1. Unclear Writing</span><br>The form titles were confusing. Employees weren't sure that they were submitting the correct request form.<br>
+												</p>
+														<p><span style= "font-weight:700;">2. Poor Information Architecture</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p>
+															<p><span style= "font-weight:700;">3. Overwhelming Forms</span><br> The forms were long and had so many opportunities for users to make errors.</p>
+
+				</div>
+		</div></div>
+	</section>
+	
 
 
 	<section id="section">
