--- a/lexmark.html
+++ b/lexmark.html
@@ -169,9 +169,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Challenge</h4>
-					<h3>Increase the usage of ServiceNow</h3>
-	<p>I hoped that by improving the user experience of ServiceNow, employee opinions on the platform will become positive, and in result, usage of platform will increase. I not only needed to understand why people were avoiding the platform but also be able to pinpoint the exact steps that were frustrating the employees. Before I get into the process however, here is quick glance at the pain points and solution.
+					<img src="images/lexmarkchallenge.png" class="img-responsive center" style="max-width:100%"><br><br>
 					</p>
 				</div>
 			</div>
@@ -236,7 +234,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Pain Points at Glance</h4>
+					<h4>Interviews</h4>
 					<h3>There was ample opportunity to improve the platform</h3>
 				</div>
 			</div>
@@ -259,7 +257,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				</div>
 		</div></div>
 	</section>
-	
+
 
 
 	<section id="section">
