--- a/lexmark.html
+++ b/lexmark.html
@@ -401,7 +401,6 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 						<div class="content">
 							<div class="row">
 								<div class="col-md-12 col-sm-12 text-center">
-									<h2>Phase 3 of 4: Materializing</h2>
 									</div>
 								</div><br><br><br><br><br>
 			<div class="row">
@@ -456,64 +455,61 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 								             </div>
 													 </section>
 
-													 <section id="section">
-														<div class="container">
-															<div class="content">
-															<div class="row">
-																<div class="col-md-12 col-sm-12">
-																	<h3>REFLECTION</h3>
-																	<p class="mont">What I learned</p>
-																	</div>
-																</div>
-																<br>
-																	<div class="row">
-																	 <div class="col-lg-12 col-md-12 col-sm-12">
+													 <section>
+												 	<div class="contentblock content-wrapper900">
+												 			<div class="row">
+												 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+												 								<br><br><br><br><br><br><h4>Reflection</h4>
+												 									<h3>Ultimately, I became a better designer</h3><br>
+												 							</div></div>
+												 							<div class="row">
+												 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-								                   <p>When attempting a redesign, figure out why the previous designers designed the product in the way they did.<br><br>
-								                   When designing for a company, make sure the visuals for the product stay within company's branding and style guide.<br>
-								                 	<br>Frequently communicate with developers about specific details of the design rather than relying on them to list all the limitations.<br><br>
-As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. For this project, I needed to consider what was feasible for the engineering team and took the extra time to change my design.<br><br>
+												 											<p><span style= "font-weight:700;">1. Communicate often and early with developers.</span><br>Actually, the quality of communication matters too. Be specific with details of the design and be pointed with questions about limitations.</br></br>
 
-																	Determined that I want to be a designer and not a researcher. The type of design I enjoy is design research while UX research roles require a different set of skills.
-																	<br><br><br><br>
+												 											<span style= "font-weight:700;">2. Think in product & not features </span><br> As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. <br></br>
 
-																	 <p class="mont">Where to improve</p>
-																	 <p><br>
-																	 Even if there is an existing style guide, try to be more persuasive about why the visuals should be updated.<br><br>
-								                   Learn how to design for motion. Tackle more visually heavy projects and wove in motion design into interaction design.</p>
+												 	<span style= "font-weight:700;">3. Use current components if there is any but be persuasive about updating it</span><br>I wish I had more time to help update our design system or even push for a separate style guide for internal tools than use the same one for consumer facing products.</p>
+												 								<br><br>
 
 
-								               </div>
-								             </div>
-													 </section>
+												 									</p>
+												 							</div>
+												 		</div>
+												 		</div>
+												 	</section>
 
 
 
 
+												 	<div class="custom-end">
+												 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+												 			<hr>
+												 		<p style="font-family:'Muli', Sans-serif; font-size:14px;">© 2020 Designed & Coded by 🙋🏻‍♀️</p>
+												 	</div>
+												 	</div>
+												 	</div>
 
-													 <div class="custom-end">
-													 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-													 		<hr>
-													 	<p style="font-family:'Muli', Sans-serif; font-size:14px;">© 2020 Designed & Coded by 🙋🏻‍♀️</p>
-													 </div>
-													 </div>
-													 </div>
-
-													 <!-- JAVASCRIPT JS FILES -->
-													 <script src="js/jquery.js"></script>
-													 <script src="js/bootstrap.min.js"></script>
-													 <script src="js/isotope.js"></script>
-													 <script src="js/imagesloaded.min.js"></script>
-													 <script src="js/nivo-lightbox.min.js"></script>
-													 <script src="js/wow.min.js"></script>
-													 <script src="js/custom.js"></script>
-													 <script>
+												 	<!-- JAVASCRIPT JS FILES -->
+												 	<script src="js/jquery.js"></script>
+												 	<script src="js/bootstrap.min.js"></script>
+												 	<script src="js/isotope.js"></script>
+												 	<script src="js/imagesloaded.min.js"></script>
+												 	<script src="js/nivo-lightbox.min.js"></script>
+												 	<script src="js/wow.min.js"></script>
+												 	<script src="js/custom.js"></script>
+												 	<script>
 
 
-													 $('button').on('mousedown',
-													     /** @param {!jQuery.Event} event */
-													     function(event) {
-													         event.preventDefault();
-													     }
-													 );
-													 </script>
+												 	$('button').on('mousedown',
+												 	    /** @param {!jQuery.Event} event */
+												 	    function(event) {
+												 	        event.preventDefault();
+												 	    }
+												 	);
+												 	</script>
+
+
+
+												 	</body>
+												 	</html>
