--- a/lexmark.html
+++ b/lexmark.html
@@ -467,7 +467,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 												 											<p><span style= "font-weight:700;">1. Communicate often and early with developers.</span><br>Actually, the quality of communication matters too. Be specific with details of the design and be pointed with questions about limitations.</br></br>
 
-												 											<span style= "font-weight:700;">2. Think in product & not features </span><br> As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. <br></br>
+												 											<span style= "font-weight:700;">2. Buisness are important too </span><br> As a designer, we cannot always do what is best for our users. We need to be able to do what is best for our users given the resources that we have. <br></br>
 
 												 	<span style= "font-weight:700;">3. Use current components if there is any but be persuasive about updating it</span><br>I wish I had more time to help update our design system or even push for a separate style guide for internal tools than use the same one for consumer facing products.</p>
 												 								<br><br>
