--- a/thrive.html
+++ b/thrive.html
@@ -277,10 +277,10 @@ Thrive is a mobile app-based solution that helps people eat less meat
 
 					<div class='parent'>
 						<p><div class='rectangle inline-block-child'></div>
-							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"><span style="font-weight:bold;">Reward</span> users 🏆</span>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"><span style="font-weight:bold;">Gamify</span> it 🏆</span>
 						</p>
 					</div>
-					<p>Incorporate weekly "meat-free" goals and gamify it. Gamification allows for quick feedback.</p>
+					<p>People want to know when they're making progress. Use gamification to incorporate weekly "meat-free" goals for quick feedback.</p>
 					<div class='parent'>
 						<p><div class='rectangle inline-block-child'></div>
 							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em">Be <span style="font-weight:bold;">resourceful 🥕</span></span>
@@ -304,7 +304,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 									<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> Provide <span style="font-weight:bold;">social support 🧑‍🤝‍🧑</span></span>
 								</p>
 							</div>
-							<p>Connect users with others who are also trying to eat less meat and allow them to engage in friendly competition on leaderboards.<p>
+							<p>Veganism can be a lonely journey. Connect users with others who are also trying to eat less meat and allow them to engage in friendly competition on leaderboards.<p>
 </div>
 	</div>
 	</div>
