--- a/lexmark.html
+++ b/lexmark.html
@@ -65,7 +65,7 @@
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1>Lexmark Internship</h1>
+					<h1>Internship at Lexmark</h1>
 <h2>
 I redesigned Lexmark's internal tool to improve its information architecture, interface design, and interaction design for a better user experience
 
@@ -255,55 +255,25 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 															<p><span style= "font-weight:700;">3. Overwhelming Forms</span><br> The forms were long and had so many opportunities for users to make errors.</p>
 
 				</div>
-		</div></div>
+		</div>
+</div>
 	</section>
 
+	<section>
+		<div class="content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%">
 
-
-	<section id="section">
-			<div class="container">
-						<div class="content">
-							<div class="row">
-								<div class="col-md-12 col-sm-12 text-center">
-									<!-- <h2>Phase 1 of 4: Problem Framing</h2> -->
-									</div>
-								</div><br><br><br><br><br><br>
-			<!-- <div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<h3>IDENTIFIED PAINPOINTS</h3>
-					<p>After the stakeholder meetings with the ServiceNow team manager, developer, and the person who handles all the ServiceNow requests, I had a clear understanding of the problem space. Unfortunately, Lexmark was unable to provide any quantitative data on ServiceNow's conversion and bounce rates. I decided to conduct interviews and usability tests with 10 target users to pinpoint where the problems were exactly occuring.</p><br>
 				</div>
-			</div> -->
-				<div class="col-lg-6 col-md-6 col-sm-12 wow fadeInUp contentblock" data-wow-delay="0.4s">
-					<img src="images/lexmarkoldflow.png" class="img-responsive center" style="max-width:100%"><br><br>
+			</div>
 		</div>
-			<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-				<h4 style="color:#145930;">PAIN POINT I</h4>
-				<p>Employees could not accurately and quickly find the forms they were looking for in ServiceNow.</p>
-		</div>
-		<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.6s">
-			<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
-			<p>Conduct a card sort and come up with a new information architecture structure that best reflects users' existing mental models.</p><br><br><br><br>
-</div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-	<h4 style="color:#145930;">PAIN POINT II</h4>
-	<p>Employees were unsure if the form they were using was correct. </p>
-</div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
-	<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
-	<p>Give users context and prevent errors whereever possible. Help build users' confidence by making it clear they are taking the correct or wrong steps. </p><br>
-<br><br><br></div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".8s">
-	<h4 style="color:#145930;">PAIN POINT III</h4>
-	<p>The forms were extensive and pushed users to phone in requests rather than use the existing online system. </p>
-</div>
-<div class="col-lg-3 col-md-3 col-sm-6 wow fadeInUp" data-wow-delay=".8s">
-	<h4 style="color:#145930;">DESIGN OPPORTUNITY</h4>
-	<p>Make the online system seem less daunting by redesigning all 10 forms. Make them clear and concise.</p>
-</div>
-	</div>
-</div>
 	</section>
+
+
+
+
+
 
 	<section id="graybg">
 		<div class="container contentblock">
